nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration4.ql
form test
{	
	question3 number "test6"

	question4 number "test7" = question3 + 1
	question4 number "test8" = question3 + 2
}